Implemented CRUD functionality with AdminPanel

--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:t+WpClizPJGM8BcjTxKiujO7uwNYspMok7Bpur5SGPY=
 APP_DEBUG=true
 APP_URL=http://localhost
 
@@ -37,3 +37,7 @@ PUSHER_APP_CLUSTER=mt1
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+GITHUB_CLIENT_ID = d650f06e090c4d891577
+GITHUB_CLIENT_SECRET = 178dc919274273805725c1dab308565e1d889285
+REDIRECT_URL = http://127.0.0.1:8000/login/github/callback
